# ffDiaporama

./: BUILDVERSION.txt  Makefile  README.md  TODO-LIST.txt  authors.txt  colorcombobox.cpp  ffDiaporama.desktop  ffDiaporama.pro  ffdiaporama.pri  readme.txt
WIKI/: wikifake_de.ts
WIKI/src_en/: 0041.html  0101.html
ffDiaporama_rsc/: ffDiaporama_rsc.pro
ffDiaporama_texturemate/: LICENSE  ffDiaporama_texturemate.pro
ffDiaporama_texturemate/Asphalt/: 100.ic1  100.ic2  100.ic3  101.ic1  101.ic2  101.ic3  102.ic1  102.ic2  102.ic3  103.ic1  103.ic2  103.ic3  104.ic1  104.ic2  104.ic3  105.ic1  105.ic2  105.ic3  106.ic1  106.ic2  106.ic3  107.ic1  107.ic2  107.ic3  108.ic1  108.ic2  108.ic3  109.ic1  109.ic2  109.ic3  110.ic1  110.ic2  110.ic3
ffDiaporama_texturemate/Brick/: 201.ic1  201.ic2  201.ic3  202.ic1  202.ic2  202.ic3  203.ic1  203.ic2  203.ic3  204.ic1  204.ic2  204.ic3  205.ic1  205.ic2  205.ic3  206.ic1  206.ic2  206.ic3  207.ic1  207.ic2  207.ic3  208.ic1  208.ic2  208.ic3  209.ic1  209.ic2  209.ic3  210.ic1  210.ic2  210.ic3  211.ic1  211.ic2  211.ic3  212.ic1  212.ic2  212.ic3
ffDiaporama_texturemate/Cement/: 300.ic1  300.ic2  300.ic3  301.ic1  301.ic2  301.ic3  302.ic1  302.ic2  302.ic3  303.ic1  303.ic2  303.ic3  304.ic1  304.ic2  304.ic3  305.ic1  305.ic2  305.ic3  306.ic1  306.ic2  306.ic3  (+30 more)
locale/: ffDiaporama_cz.qm  ffDiaporama_cz.ts  ffDiaporama_de.qm  ffDiaporama_de.ts  ffDiaporama_el.qm  ffDiaporama_el.ts  ffDiaporama_es.qm  ffDiaporama_es.ts  ffDiaporama_fr.qm  ffDiaporama_fr.ts  ffDiaporama_gl.qm  ffDiaporama_gl.ts  ffDiaporama_it.qm  ffDiaporama_it.ts  ffDiaporama_nl.qm  ffDiaporama_nl.ts  ffDiaporama_pt.qm  ffDiaporama_pt.ts  ffDiaporama_ru.qm  ffDiaporama_ru.ts  ffDiaporama_zh_tw.qm  ffDiaporama_zh_tw.ts
src/ffDiaporama_lib/qimageblitz-0.0.6/: CMakeLists.txt  Changelog  blitz.opensdf  blitz.pri  blitz.pro  blitz.sln  call_qmake_qt550_X32.bat  call_qmake_qt550_X64.bat  qt_version.bat  start_vs2010_qt550.bat  start_vs2010_qt551_32.bat
src/ffDiaporama_lib/qimageblitz-0.0.6/blitz/: CMakeLists.txt  blitz.pro  blitz.vcxproj  blitz.vcxproj.filters  blitzcpu.h  colors.cpp  config-externalasm.h  config-processor.h  convolve.cpp  histogram.cpp  ocv.cpp  ocv.h  scalefilter.cpp
src/ffDiaporama_lib/qimageblitz-0.0.6/blitz/private/: inlinehsv.h
src/ffDiaporama_lib/qimageblitz-0.0.6/ffd_Filter/: ImageFilters.cpp  ImageFilters.h
src/ffDiaporama_lib/qimageblitz-0.0.6/test/: CMakeLists.txt  main.cpp  mainwindow.cpp  scaledialog.h  test.pro  test.vcxproj  test.vcxproj.filters
src/ffDiaporama_lib/qimageblitz-0.0.6/test/debug/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  moc_mainwindow.cpp  test.lastbuildstate
(+1858 files in other folders)
